--- a/maven-core/pom.xml
+++ b/maven-core/pom.xml
@@ -196,10 +196,12 @@ under the License.
         <groupId>org.codehaus.plexus</groupId>
         <artifactId>plexus-component-metadata</artifactId>
       </plugin>
+      <!-- disable plugin in favor of src/main/resources/META-INF/sisu/javax.inject.Named
+           while waiting for a release of https://github.com/eclipse/sisu.inject/pull/5
       <plugin>
         <groupId>org.eclipse.sisu</groupId>
         <artifactId>sisu-maven-plugin</artifactId>
-      </plugin>
+      </plugin-->
       <plugin>
         <groupId>org.codehaus.modello</groupId>
         <artifactId>modello-maven-plugin</artifactId>
