--- a/apache-maven/pom.xml
+++ b/apache-maven/pom.xml
@@ -210,10 +210,10 @@ under the License.
             <fileSet>
               <directory>${project.build.directory}</directory>
               <includes>
-                <include>${project.artifactId}-${project.version}-bin.zip</include>
-                <include>${project.artifactId}-${project.version}-bin.tar.gz</include>
-                <include>${project.artifactId}-${project.version}-src.zip</include>
-                <include>${project.artifactId}-${project.version}-src.tar.gz</include>
+                <include>${project.artifactId}-${project.version}-bin-${buildId}.zip</include>
+                <include>${project.artifactId}-${project.version}-bin-${buildId}.tar.gz</include>
+                <include>${project.artifactId}-${project.version}-src-${buildId}.zip</include>
+                <include>${project.artifactId}-${project.version}-src-${buildId}.tar.gz</include>
               </includes>
             </fileSet>
           </fileSets>
